--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mocha": "^6.1.4",
     "moment": "^2.22.2",
     "nodemailer": "^6.1.1",
+    "nodemon": "^2.0.1",
     "numbro": "^2.1.1",
     "p-queue": "^5.0.0",
     "patch-package": "^6.1.2",
@@ -82,6 +83,7 @@
   "scripts": {
     "start": "node index.js trade",
     "postinstall": "patch-package",
-    "test": "mocha 'test/**/*.test.js'"
+    "test": "mocha 'test/**/*.test.js'",
+    "dev": "nodemon index.js trade"
   }
 }
